Changelog for mk-slave-delay:

2010-06-08: version 1.0.21

   * Connections did not preserve server SQL modes (issue 801).

2010-04-01: version 1.0.20

   * Privileges needed for operation weren't documented (issue 939).
   * --ask-pass crashed if h DSN part wasn't specified (issue 949).
   * Added DSN OPTIONS section to POD (issue 55).

2010-01-06: version 1.0.19

   * The script crashed immediately on some OS or versions of Perl (issue 733).

2009-10-30: version 1.0.18

   * --set-vars did not work (issue 597).
   * Command line options did not override config file options (issue 617).

2009-09-30: version 1.0.17

   * Added --pid (issue 391).

2009-07-31: version 1.0.16

   * Added RISKS section to POD (issue 538).
   * The script crashed immediately on Windows (issue 531).

2009-06-30: version 1.0.15

   * Updates to shared code.

2009-06-02: version 1.0.14

   * Standardized options.
   * Script did not die if --pid file already existed (issue 383).

2009-05-03: version 1.0.13

   * Removed the --askpass long option.  Use --ask-pass instead.
   * Removed the --setvars long option.  Use --set-vars instead.
   * Removed the --usemaster long option.  Use --use-master instead.
   * Removed the -d short option.  Use --delay instead.
   * Removed the -c short option.  Use --continue instead.
   * Removed the -q short option.  Use --quiet instead.
   * Removed the -t short option.  Use --run-time instead.
   * Removed the --time long option.  Use --run-time instead.
   * Removed the -u short option.  Use --use-master instead.
   * Removed the -i short option.  Use --interval instead.
   * Added the -q short option for --quiet.
   * Added the --config option for issue 231.
   * Added the --log option for issue 241.
   * Added the following options for issue 248:
   *    --charset (-A)
   *    --defaults-file (-F)
   *    --host (-h)
   *    --password (-p)
   *    --port (-P)
   *    --socket (-S)
   *    --user (-u)